--- a/templates/rest/map.html
+++ b/templates/rest/map.html
@@ -1,20 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8"/>
-	<title>Kakao 지도 시작하기</title>
-</head>
-<body>
-	<div id="map" style="width:500px;height:400px;">왜 안켜져</div>
-	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fd91b1ec6cf9705b5dbe09e5aa11d1d0"></script>
-	<script>
-		var container = document.getElementById('map');
-		var options = {
-			center: new kakao.maps.LatLng(33.450701, 126.570667),
-			level: 3
-		};
+{% extends 'rest/index.html' %}
 
-		var map = new kakao.maps.Map(container, options);
-	</script>
+{% block content %}
+<body>
+		
+		<h1> 바보</h1>
+		
+
+{% endblock content %}
+
+이건 안나오나보네
 </body>
-</html>
