--- a/templates/rest/map.html
+++ b/templates/rest/map.html
@@ -1,12 +1,26 @@
+
 {% extends 'rest/index.html' %}
-
 {% block content %}
+
 <body>
-		
-		<h1> 바보</h1>
-		
+	
+	<h1> 바보</h1>
+	<a href='https://map.kakao.com/link/map/35.229251,129.090381'>이동</a>
+	<div id="map" style="width:100%;height:350px;"></div>
 
-{% endblock content %}
+	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fd91b1ec6cf9705b5dbe09e5aa11d1d0"></script>
+	<script>
+		var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+			mapOption = {
+				center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+				level: 3 // 지도의 확대 레벨
+			};
 
-이건 안나오나보네
-</body>
+		// 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
+		var map = new kakao.maps.Map(mapContainer, mapOption); 
+    </script>
+    </body>
+
+	{% endblock content %}
+
+	이건 안나오나보네
