--- a/templates/rest/index.html
+++ b/templates/rest/index.html
@@ -11,38 +11,15 @@
     <link href='/static/css/bootstrap.min.css' rel='stylesheet' />
     <link rel='icon' type='image/png' sizes='16x16' href='/static/icon/menu.png'>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/cover/">
-
-    <!-- Bootstrap core CSS -->
-<link href="/docs/4.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-    <!-- Favicons -->
-<link rel="apple-touch-icon" href="/docs/4.4/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-<link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-<link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-<link rel="manifest" href="/docs/4.4/assets/img/favicons/manifest.json">
-<link rel="mask-icon" href="/docs/4.4/assets/img/favicons/safari-pinned-tab.svg" color="#563d7c">
-<link rel="icon" href="/docs/4.4/assets/img/favicons/favicon.ico">
-<meta name="msapplication-config" content="/docs/4.4/assets/img/favicons/browserconfig.xml">
-<meta name="theme-color" content="#563d7c">
-
-
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-    <!-- Custom styles for this template -->
+    <link href="/docs/4.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="apple-touch-icon" href="/docs/4.4/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
+    <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+    <link rel="manifest" href="/docs/4.4/assets/img/favicons/manifest.json">
+    <link rel="mask-icon" href="/docs/4.4/assets/img/favicons/safari-pinned-tab.svg" color="#563d7c">
+    <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon.ico">
+    <meta name="msapplication-config" content="/docs/4.4/assets/img/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#563d7c">
     <link href="cover.css" rel="stylesheet">
     
   </head>
@@ -71,6 +48,8 @@
     </div>
   </header>
   <main role="main" class="inner cover">
+      <div style='margin-top:120px'>
+        </div>
     <h3 class="cover-heading">Main Function</h3>
     <p class="lead">
             <div class='container' width='600px'>
@@ -78,7 +57,7 @@
             
                 <button class = 'btn btn-outline-dark' onclick="location.href='/rest/board'" >Board</button>
                 <button class = 'btn btn-outline-dark' onclick="location.href='/rest/search'" >Search</button>
-                <div style='margin-top:30px'></div>
+                <div style='margin-top:150px'></div>
       <img src="\static\icon\sashimi.png">
       <img src="\static\icon\burger.png">
       <img src="\static\icon\bibimbap.png">
@@ -87,9 +66,7 @@
                 </div>
     </p>
   </main>
-
-  <footer class="mastfoot mt-auto">
-    <div class="inner">
+    <div>
       <p>you will get enough time with this program </p>
     </div>
   </footer>
