--- a/templates/rest/search.html
+++ b/templates/rest/search.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <input class="form-control mr-sm-2" style="width:300px" type="search" placeholder="식당을 검색하세요">
-    <button class = 'btn btn-outline-dark' style="margin-top:5px" onclick="location.href='/rest/detail'" >검색</button><br><br><br>
+    <button class = 'btn btn-outline-dark' style="margin-top:5px" onclick="location.href='/rest/detail'" >검색</button><br>
     <label style="width:300px">상세검색1-원하는 종류를 선택해주세요</label>
     <div class='input_chk'>
             <input type="checkbox" id='kor' class='chk'required>
