--- a/templates/rest/index.html
+++ b/templates/rest/index.html
@@ -64,9 +64,16 @@
       <img src="\static\icon\kimchi.png">
             
                 </div>
+                
     </p>
   </main>
     <div>
+      <div>
+        
+        {% for new_data in data %}
+        {{new_data.2}}
+        {% endfor %}
+      </div>
       <p>you will get enough time with this program </p>
     </div>
   </footer>
