--- a/templates/rest/board.html
+++ b/templates/rest/board.html
@@ -23,23 +23,25 @@
                 </tr>
 
                 <tr>
-                <td height="180" align='center'><img src="\static\icon\sashimi.png"><br>
-                <a href="#" class="btn btn-lg btn-secondary" onclick="location.href='/rest/board'">more detail</a></td>
+                <td height="180" align='center'><a href="detail" class="btn btn-lg btn-secondary"><img src="\static\icon\sashimi.png"></a>
+                <td>식당명: 고봉김밥<br>
+                    평점: 4<br>
+                    가격대:5500~<br>
+                    도보:3분</td>
+                </tr>
+
+                <tr>
+                <td height="180" align='center'><a href="detail" class="btn btn-lg btn-secondary"><img src="\static\icon\burger.png"></a>
                 <td>식당명: 고봉김밥<br>평점: 4<br>가격대:5500~<br>도보:3분</td>
                 </tr>
 
                 <tr>
-                <td height="180" align='center'><img src="\static\icon\burger.png"><br><a href="detail">more detail</a></td>
+                <td height="180" align='center'><a href="detail" class="btn btn-lg btn-secondary"><img src="\static\icon\bibimbap.png"></a>
                 <td>식당명: 고봉김밥<br>평점: 4<br>가격대:5500~<br>도보:3분</td>
                 </tr>
 
                 <tr>
-                <td height="180" align='center'><img src="\static\icon\bibimbap.png"><br><a href="detail">more detail</a></td>
-                <td>식당명: 고봉김밥<br>평점: 4<br>가격대:5500~<br>도보:3분</td>
-                </tr>
-
-                <tr>
-                <td height="180" align='center'><img src="\static\icon\kimchi.png"><br><a href="detail">more detail</a></td>
+                <td height="180" align='center'><a href="detail" class="btn btn-lg btn-secondary"><img src="\static\icon\kimchi.png"></a>
                 <td>식당명: 고봉김밥<br>평점: 4<br>가격대:5500~<br>도보:3분</td>
                 </tr>
 
