--- a/templates/rest/home.html
+++ b/templates/rest/home.html
@@ -47,23 +47,22 @@
     
   </head>
 
-  <body class="text-center">
+  <body class="text-center" >
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="masthead mb-auto">
     <div class="inner">
-      <h1 class="masthead-brand">R.I.P</h1>
+        <div class="title">
+            <h1>R . I . P</h1>
+            <span class="byline">Restaurant In Program</span> </div>
       <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="#">Restaurant</a>
-        <a class="nav-link" href="#">In</a>
-        <a class="nav-link" href="#">Program</a>
       </nav>
     </div>
   </header>
-  <main role="main" class="inner cover">
-    <h3 class="cover-heading">Welcome</h3>
+
+    <h3 class="cover-heading" style='margin-top:60px'>Welcome</h3>
     <p class="lead">This is the site for your LunchTime more effective</p>
     <p class="lead">
-            <div class='container' width='600px'>
+            <div class='container' width='600px' style='margin-top:80px'>
                 
             
                     <img src="/static/icon/menu1.png" a href='detail'><br><br>
