--- a/templates/rest/index.html
+++ b/templates/rest/index.html
@@ -1,4 +1,7 @@
 <!doctype html>
+{% extends 'rest/base.html' %}
+
+{% block content %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -56,12 +59,15 @@
                 
             
                 <button class = 'btn btn-outline-dark' onclick="location.href='/rest/board'" >Board</button>
+                <table> - you can browse freely tons of Restaurant in Busan Univ.</table>
+                <div style='margin-top:80px'></div>
                 <button class = 'btn btn-outline-dark' onclick="location.href='/rest/search'" >Search</button>
+                <table> - you can choose category of Restaurant and distance.</table>
                 <div style='margin-top:150px'></div>
-      <img src="\static\icon\sashimi.png">
-      <img src="\static\icon\burger.png">
-      <img src="\static\icon\bibimbap.png">
-      <img src="\static\icon\kimchi.png">
+      <a href="https://www.google.com/search?sxsrf=ACYBGNQwGHCR88DUXarzwLova0DaFfyQ9w:1576212469927&q=%EA%B3%A0%EB%B4%89%EA%B9%80%EB%B0%A5+%EB%B6%80%EC%82%B0%EB%8C%80%EC%97%AD&npsic=0&rflfq=1&rlha=0&rllag=35234102,129089877,584&tbm=lcl&ved=2ahUKEwjZ8fCC6bHmAhVhG6YKHRkHC-AQtgN6BAgLEAQ&tbs=lrf:!3sIAE,lf:1,lf_ui:4&rldoc=1"><img src="\static\icon\sashimi.png"></a>
+      <a href="https://www.google.com/search?tbm=lcl&sxsrf=ACYBGNTCnh1XdsDGjlxh1xw0zm6KjXZJBQ%3A1576212473795&ei=-RfzXbeGMMmRr7wPweeEiA4&q=%EB%A7%98%EC%8A%A4%ED%84%B0%EC%B9%98+%EB%B6%80%EC%82%B0%EB%8C%80%EC%A0%90&oq=%EB%A7%98%EC%8A%A4%ED%84%B0%EC%B9%98+%EB%B6%80%EC%82%B0%EB%8C%80%EC%A0%90&gs_l=psy-ab.3...44495.51585.0.51788.22.14.0.0.0.0.265.1540.0j7j2.10.0....0...1c.1j4.64.psy-ab..18.4.680.10..0j35i39k1j0i20i263k1j0i131k1j35i362i39k1j0i67k1.139.Drsy_yx1Smc"><img src="\static\icon\burger.png"></a>
+      <a href="https://www.google.com/maps/dir/35.1250512,129.0398118/%EC%BD%94%ED%95%98%EB%A3%A8/@35.2261571,129.0840031,15.5z/data=!4m9!4m8!1m1!4e1!1m5!1m1!1s0x356893eb815b9ead:0x20bd154168b6eb59!2m2!1d129.0874216!2d35.231994"><img src="\static\icon\bibimbap.png"></a>
+      <a href="board"><img src="\static\icon\kimchi.png"></a>
             
                 </div>
     </p>
@@ -73,3 +79,4 @@
 </div>
 </body>
 </html>
+{% endblock %}
