--- a/templates/rest/board.html
+++ b/templates/rest/board.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+{% extends 'rest/base.html' %}
+
+{% block content %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -49,3 +52,4 @@
             </table>
 </body>
 </html>
+{% endblock %}
