--- a/templates/rest/detail.html
+++ b/templates/rest/detail.html
@@ -1,17 +1,44 @@
 <!DOCTYPE html>
+{% extends 'rest/base.html' %}
+
+{% block content %}
 <html lang="en">
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="static/css/mystyle.css" rel="stylesheet" />
-        <title>상세정보</title>
+        <title>Detail</title>
         <link href='/static/css/bootstrap.min.css' rel='stylesheet' />
 </head>
 <body>
-    <tr>
-        영업시간<br>
-        메뉴
-    </tr>
+    <div class="row double">
+                
+            <section class="4u">
+                <header>
+                    <h2>Maecenas luctus lectus</h2>
+                </header>
+                <span class="pennant"><span class="fa fa-apple"></span></span>
+                <p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+                <a href="#" class="button button-style1">Read More</a>
+            </section>
+            <section class="4u">
+                <header>
+                    <h2>Etiam rhoncus volutpat</h2>
+                </header>
+                <span class="pennant"><span class="fa fa-rocket"></span></span>
+                <p>Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna.</p>
+                <a href="#" class="button button-style1">Read More</a>
+            </section>
+            <section class="4u">
+                <header>
+                    <h2>Mauris vulputate dolor</h2>
+                </header>
+                <span class="pennant"><span class="fa fa-cogs"></span></span>
+                <p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+                <a href="#" class="button button-style1">Read More</a>
+            </section>
+    </div>
 </body>
 </html>
+{% endblock %}
