--- a/templates/rest/index.html
+++ b/templates/rest/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.6">
-    <title>맛집</title>
+    <title>index</title>
     <link href="static/css/mystyle.css" rel="stylesheet" />
     <link href='/static/css/bootstrap.min.css' rel='stylesheet' />
     <link rel='icon' type='image/png' sizes='16x16' href='/static/icon/menu.png'>
@@ -74,12 +74,6 @@
     </p>
   </main>
     <div>
-      <div>
-        
-        {% for new_data in data %}
-        {{new_data.2}}
-        {% endfor %}
-      </div>
       <p>you will get enough time with this program </p>
     </div>
   </footer>
