--- a/templates/rest/base.html
+++ b/templates/rest/base.html
@@ -33,7 +33,7 @@
                       </ul>
                       <form class="form-inline my-2 my-lg-0">
                         <input class="form-control mr-sm-2" type="text" placeholder="Search Restaurant" aria-label="Search">
-                        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                        <button class="btn btn-secondary my-2 my-sm-0" type="submit"><a href="detail">Search</a></button>
                       </form>
                     </div>
                   </nav>
