--- a/templates/rest/detail.html
+++ b/templates/rest/detail.html
@@ -12,33 +12,10 @@
         <link href='/static/css/bootstrap.min.css' rel='stylesheet' />
 </head>
 <body>
-    <div class="row double">
-                
-            <section class="4u">
-                <header>
-                    <h2>Maecenas luctus lectus</h2>
-                </header>
-                <span class="pennant"><span class="fa fa-apple"></span></span>
-                <p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
-                <a href="#" class="button button-style1">Read More</a>
-            </section>
-            <section class="4u">
-                <header>
-                    <h2>Etiam rhoncus volutpat</h2>
-                </header>
-                <span class="pennant"><span class="fa fa-rocket"></span></span>
-                <p>Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna.</p>
-                <a href="#" class="button button-style1">Read More</a>
-            </section>
-            <section class="4u">
-                <header>
-                    <h2>Mauris vulputate dolor</h2>
-                </header>
-                <span class="pennant"><span class="fa fa-cogs"></span></span>
-                <p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
-                <a href="#" class="button button-style1">Read More</a>
-            </section>
-    </div>
+    
+    <tr>
+    pic
+    </tr>
 </body>
 </html>
 {% endblock %}
