--- a/templates/rest/home.html
+++ b/templates/rest/home.html
@@ -68,7 +68,9 @@
                     <img src="/static/icon/menu1.png" a href='detail'><br><br>
             
                 </div>
-      <a href="#" class="btn btn-lg btn-secondary" onclick="location.href='/rest/index'">Browse the page</a>
+                <div >
+      <a href="index" style='width:200px' class="btn btn-lg btn-secondary" onclick="location.href='/rest/index'">Browse the page</a>
+    </div>
     </p>
   </main>
 
