--- a/templates/rest/index.html
+++ b/templates/rest/index.html
@@ -24,7 +24,6 @@
     <meta name="msapplication-config" content="/docs/4.4/assets/img/favicons/browserconfig.xml">
     <meta name="theme-color" content="#563d7c">
     <link href="cover.css" rel="stylesheet">
-    
   </head>
 
   <body class="text-center">
@@ -51,7 +50,7 @@
     </div>
   </header>
   <main role="main" class="inner cover">
-      <div style='margin-top:120px'>
+      <div style='margin-top:120px;'>
         </div>
     <h3 class="cover-heading">Main Function</h3>
     <p class="lead">
